[package]
name = "tailor"
version = "0.1.0"
authors = ["Petr Hodina <hodinapetr46@gmail.com>"]
description = "Generate MCU register definitions based on SVD file"
readme = "README.md"
license = "MIT/Apache-2.0"
repository = "https://github.com/phodina/tailor"
homepage = "https://github.com/phodina/tailor"

[[bin]]
name = "tailor"
path = "src/main.rs"

[dependencies]
clap = "2.31.2"
serde = "1.0.41"
serde_derive = "1.0.41"
serde-xml-rs = "0.2.1"
fgen = "0.1.0"
error-chain = "0.11.0"
